--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
+    "@iconify/react": "^5.2.0",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.4.1",
     "next": "15.1.6",
     "react": "^19.0.0",
