--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "@iconify/react": "^5.2.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^12.4.1",
     "moment": "^2.30.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
+    "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
